--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,8 @@ html {
   line-height: 1.5;
 }
 
-main {
-  margin-top: 3rem;
+#app {
+  margin-top: 2rem;
   flex-wrap: wrap;
   display: flex;
   gap: 24px;
@@ -28,7 +28,7 @@ main {
 }
 
 .container {
-  padding: 1.5rem 1rem;
+  padding: 3rem 1rem;
   width: 100%;
   max-width: 1120px;
   margin: 0 auto;
