--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@ html {
   align-items: flex-start;
 }
 
+.app__component {
+  max-width: 32rem;
+  margin: 0 auto;
+}
+
 .container {
   padding: 3rem 1rem;
   width: 100%;
@@ -122,7 +127,7 @@ html {
 
   &::after {
     content: attr(data-num);
-    font-size: 2rem;
+    font-size: 1.834rem;
     font-weight: 700;
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
     line-height: 1;
